fix: Remove styling override for overflow

--- a/src/main/resources/assets/styles/_timeline.scss
+++ b/src/main/resources/assets/styles/_timeline.scss
@@ -91,10 +91,6 @@
       position: relative;
       margin-bottom: 30px;
 
-      .ssb-expansion-box.open .content {
-        overflow: visible;
-      }
-
       .year {
         width: 180px;
         height: 80px;
